--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- TrustBox script -->
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
    
+      <script>
         const loadScriptsTimer = setTimeout(loadScripts, 5000);
         const userInteractionEvents = ["mouseover", "keydown", "touchmove", "touchstart"];
         userInteractionEvents.forEach(function(event) {
