--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Fri Feb 16 2024 14:22:44 GMT+0000 (Coordinated Universal Time) -->
+
+
 <html data-wf-page="63dd575601b9b8c3d768fad6" data-wf-site="63dd575601b9b8315968fad5">
 
 <head>
@@ -138,7 +138,7 @@
                                            <iframe id="videoPlayer" controls style="width:100%; height:100%;"src="https://cdn.openai.com/tmp/s/title_0.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                      </div>
-                                 // script for arrow selector
+                                 <!-- script for arrow selector -->
 
                             </div>
                         </div>
