--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 
                                 <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
                                     <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                                           <iframe id="videoPlayer" controls style="width:100%; height:100%;"src="https://cdn.openai.com/tmp/s/title_0.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                           <iframe id="videoPlayer" controls style="width:100%; height:100%;"src="https://www.youtube.com/embed/_HhbxSL3Swc?si=gn5S66ywz_EnrRxN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                      </div>
                                  <!-- script for arrow selector -->
