--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mindeo | Le leader de la formation en ligne</title>
+    <title>Digital Wealth</title>
   
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     
@@ -81,12 +81,10 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="eea8426e-8ced-44c5-cdeb-dc123330a187" data-easing="ease" data-easing2="ease" role="banner" class="spark-square-menu-with-centered-links w-nav">
             <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63e36ab0105ac12cbb401b8c_logo.svg" loading="lazy" alt="" height="23"/></a>
                 <nav
-                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="/#Formations" class="spark-nav-link spark-centered w-nav-link">Nos formations</a><a href="/#nosExperts" class="spark-nav-link spark-centered w-nav-link">Nos experts</a><a href="/#nosContenus" class="spark-nav-link spark-centered w-nav-link">Nos contenus gratuits</a>
+                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="/#Formations" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
-                        href="/a-propos" class="spark-nav-link spark-centered w-nav-link">À propos</a><a href="/recrutement" class="spark-nav-link spark-centered w-nav-link">Recrutement</a></nav>
-                        <a href="https://training.mindeo.com/" class="btn-3-outline w-inline-block">
-                            <div class="text-block-15">Se connecter</div>
-                        </a>
+                        href="" class="spark-nav-link spark-centered w-nav-link">About us</a>
+                    
                         <div data-ix="simple-menu-button" class="spark-simple-menu-button w-nav-button">
                             <div class="spark-line-1 spark-simple-line"></div>
                             <div class="spark-line-2 spark-simple-line"></div>
