--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="/#Formations" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
                         href="" class="spark-nav-link spark-centered w-nav-link">About us</a>
-                    <a href="" class="spark-nav-link spark-centered w-nav-link">Recrutement</a></nav>
-                        <a href="https://training.mindeo.com/" class="btn-3-outline w-inline-block">
-                            <div class="text-block-15">Se connecter</div>
+                    <a href="" class="spark-nav-link spark-centered w-nav-link">Affiliates</a></nav>
+                        <a href="" class="btn-3-outline w-inline-block">
+                            <div class="text-block-15">Access</div>
                         </a>
                     
                         <div data-ix="simple-menu-button" class="spark-simple-menu-button w-nav-button">
