--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div data-collapse="medium" data-animation="default" data-duration="400" data-w-id="eea8426e-8ced-44c5-cdeb-dc123330a187" data-easing="ease" data-easing2="ease" role="banner" class="spark-square-menu-with-centered-links w-nav">
             <div class="square-menu-with-centered-links-inner"><a href="/" aria-current="page" class="spark-left-side-brand-logo w-nav-brand w--current"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/63e36ab0105ac12cbb401b8c_logo.svg" loading="lazy" alt="" height="23"/></a>
                 <nav
-                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="/#Formations" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
+                    role="navigation" class="spark-centered-nav-menu w-nav-menu"><a href="" class="spark-nav-link spark-centered w-nav-link">Our courses</a><a href="" class="spark-nav-link spark-centered w-nav-link">Our experts</a><a href="" class="spark-nav-link spark-centered w-nav-link">our free content</a>
                     <a
                         href="" class="spark-nav-link spark-centered w-nav-link">About us</a>
                     <a href="" class="spark-nav-link spark-centered w-nav-link">Affiliates</a></nav>
@@ -107,7 +107,7 @@
                 <div class="container padding-left no-max">
                     <div class="_2-columns f2wf-columns">
                         <div class="column smaller-col mobile-centered">
-                            <h1 class="h2 mobile-centered">Le leader francophone de la formation en ligne</h1>
+                            <h1 class="h2 mobile-centered">Unlocking Wealth in the Digital Frontier.</h1>
                             <div class="embed-white w-embed">
                                 <!-- TrustBox widget - Micro TrustScore -->
                                 <div class="trustpilot-widget" data-locale="fr-FR" data-template-id="5419b637fa0340045cd0c936" data-businessunit-id="64cbdf5ec1122a68d8e2caee" data-style-height="20px" data-style-width="100%" data-theme="dark">
@@ -126,10 +126,10 @@
                                     }
                                 </style>
                             </div>
-                            <div class="subtitle set-width mobile-centered">Mindeo est l&#x27;école en ligne qui vous permet d’acquérir les compétences nécessaires dans les domaines du business, de l’investissement et du développement personnel.</div>
-                            <div class="banner-btn-container mobile-centered"><a href="#Formations" class="btn-1 w-button">Explorer les formations</a>
+                            <div class="subtitle set-width mobile-centered">Digital Wealth is a leading online education platform dedicated to empowering individuals with the knowledge and skills to thrive in the rapidly evolving world of cryptocurrency and blockchain technology. </div>
+                            <div class="banner-btn-container mobile-centered"><a href="" class="btn-1 w-button">Explore courses</a>
                                 <a id="playVideo" href="#" class="link-video w-inline-block">
-                                    <div>Voir la vidéo</div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/640eec01ec613945d7331a9c_Arrow.svg" loading="lazy" alt="" class="link-video-svg" /></a>
+                                    <div>View video</div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/640eec01ec613945d7331a9c_Arrow.svg" loading="lazy" alt="" class="link-video-svg" /></a>
                             </div>
                         </div>
                         <div class="column padding-left bigger-flex _65 _50px-left">
