--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                             <h1 class="h2 mobile-centered">Unlocking Wealth in the Digital Frontier.</h1>
                             <div class="embed-white w-embed">
                                 <!-- TrustBox widget - Micro TrustScore -->
-                                
+                                <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b637fa0340045cd0c936" data-businessunit-id="64cbdf5ec1122a68d8e2caee" data-style-height="20px" data-style-width="100%" data-theme="dark">
+                                  
                                 </div>
                                 <!-- End TrustBox widget -->
 
