--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                 <div class="container">
                     <div class="_2-columns f2wf-columns reverse no-padding">
                         <div class="column _75 padding-left">
-                            <h2 class="h2 _600-width bold">Notre <span class="light-blue">mission</span></h2>
-                            <div class="subtitle set-width"><span class="hide-mobile">Osez changer de vie avec notre école en ligne.<br/>Des dizaines de milliers de personnes ont déjà pris le contrôle de leur vie grâce à nos programmes en ligne dans les domaines du business, de l’investissement et du développement personnel. Nos formations de haute qualité sont conçues par plus de 30 experts francophones, et notre plateforme d&#x27;apprentissage en ligne est l&#x27;un des moyens les plus efficaces pour développer des compétences pratiques dans ces domaines. </span></div>
+                            <h2 class="h2 _600-width bold">Our <span class="light-blue">mission</span></h2>
+                            <div class="subtitle set-width"><span class="hide-mobile">Our comprehensive courses are designed by industry experts and cover everything from the fundamentals of blockchain to advanced investment strategies.<br/>Whether you're a beginner looking to understand the basics or an experienced investor seeking to expand your portfolio, Cryptology Institute provides the tools, resources, and community support you need to succeed in the digital asset market. Join us and unlock the potential of cryptocurrencies for financial growth and prosperity. </span></div>
                         </div>
                         <div class="column">
                             <div class="animation-img">
