--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                     <div class="_2-columns f2wf-columns reverse no-padding">
                         <div class="column _75 padding-left">
                             <h2 class="h2 _600-width bold">Our <span class="light-blue">mission</span></h2>
-                            <div class="subtitle set-width"><span class="hide-mobile">Our comprehensive courses are designed by industry experts and cover everything from the fundamentals of blockchain to advanced investment strategies.<br/>Whether you're a beginner looking to understand the basics or an experienced investor seeking to expand your portfolio, Cryptology Institute provides the tools, resources, and community support you need to succeed in the digital asset market. Join us and unlock the potential of cryptocurrencies for financial growth and prosperity. </span></div>
+                            <div class="subtitle set-width"><span class="hide-mobile">Our comprehensive courses are designed by industry experts and cover everything from the fundamentals of blockchain to advanced investment strategies.<br/>Whether you're a beginner looking to understand the basics or an experienced investor seeking to expand your portfolio,Digital Wealth  provides the tools, resources, and community support you need to succeed in the digital asset market. Join us and unlock the potential of cryptocurrencies for financial growth and prosperity. </span></div>
                         </div>
                         <div class="column">
                             <div class="animation-img">
@@ -191,9 +191,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                 <div class="container margin-top-bottom">
                     <div class="flex-horizontale">
                         <div class="texte-gauche">
-                            <h1 class="h2 margin-bottom">Atteignez votre prochain niveau de <span class="light-blue">succès</span></h1>
-                            <p class="light-grey">Mindeo c’est déjà 5 formations expertes dans leurs domaines: Lancez vos business grâce à Ecom Pro et Business Pro, boostez vos finances avec les formations Immo Pro et Invest Pro ou atteignez votre prochain niveau de succès
-                                grâce à Success Pro. Reprendre le contrôle de sa vie n’a jamais été aussi facile !</p>
+                            <h1 class="h2 margin-bottom">Achieve your next level of <span class="light-blue">success</span></h1>
+                            <p class="light-grey">In today's rapidly evolving financial landscape, cryptocurrencies have emerged as a lucrative investment opportunity. Whether you're a seasoned investor or new to the world of digital assets, this comprehensive online course will equip you with the knowledge and skills needed to navigate the complex world of crypto investments with confidence.</p>
                             <div class="fs_numbercount-1_component extra-padding-top">
                                 <div class="fs_numbercount-1_embed w-embed w-script">
                                     <!-- [Finsweet Attributes] Number Count -->
@@ -208,7 +207,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                             <div>
                                                 <div class="fs_numbercount-1_text left bold mobile-center">Experts</div>
-                                                <div class="fs_numbercount-1_text left">à vos côtés</div>
+                                                <div class="fs_numbercount-1_text left">to support you</div>
                                             </div>
                                         </div>
                                     </div>
@@ -219,20 +218,20 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                                 <div class="number-line-colour"></div>
                                             </div>
                                             <div>
-                                                <div class="fs_numbercount-1_text left bold mobile-center">Heures</div>
-                                                <div class="fs_numbercount-1_text left">de contenus</div>
+                                                <div class="fs_numbercount-1_text left bold mobile-center">Hours</div>
+                                                <div class="fs_numbercount-1_text left">of content</div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="fs_numbercount-1_card">
-                                        <div class="fs_numbercount-1_number smaller mobile-no-padding">+<span fs-numbercount-element="number" fs-numbercount-start="0" fs-numbercount-end="250">0</span>M€</div>
+                                        <div class="fs_numbercount-1_number smaller mobile-no-padding">+<span fs-numbercount-element="number" fs-numbercount-start="0" fs-numbercount-end="250">0</span>M$</div>
                                         <div class="number-info-container">
                                             <div class="number-line">
                                                 <div class="number-line-colour"></div>
                                             </div>
                                             <div>
-                                                <div class="fs_numbercount-1_text left bold mobile-center">Générés</div>
-                                                <div class="fs_numbercount-1_text left">par nos élèves</div>
+                                                <div class="fs_numbercount-1_text left bold mobile-center">Generated</div>
+                                                <div class="fs_numbercount-1_text left">by our crypto visionaries</div>
                                             </div>
                                         </div>
                                     </div>
