--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                 <div class="stroke-container">
                                     <div class="badge badge-small-white"> Cryptocurrency</div>
                                     <h3 class="h3 smaller _8f8fab">CryptoCrash Course</h3>
-                                    <div class="grey">the only course you need, you will have a solid understanding of the fundamentals of cryptocurrency and blockchain technology, enabling them to confidently navigate the digital asset market and make informed investment decisions without any prior skills</div>
+                                    <div class="grey">Unlock the Secrets of Digital Gold: Mastering Cryptocurrency Basics and Blockchain Fundamentals!</div>
                                     <div class="badge-container">
                                         <div class="btn-1 smaller white">Find out more</div>
                                     </div>
