--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div class="pack-formation-info">
                                 <div class="stroke-container">
                                     <div class="badge badge-small-white"> Cryptocurrency</div>
-                                    <h3 class="h3 smaller _8f8fab">CryptoCrash Course</h3>
-                                    <div class="grey">Unlock the Secrets of Digital Gold: Mastering Cryptocurrency Basics and Blockchain Fundamentals!</div>
+                                    <h3 class="h3 smaller _8f8fab">CryptoCrash </h3>
+                                    <div class="grey">Unlock the Secrets of Digital Gold: Mastering Cryptocurrency Basics </div>
                                     <div class="badge-container">
                                         <div class="btn-1 smaller white">Find out more</div>
                                     </div>
