--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div class="pack-formation-info">
                                 <div class="stroke-container">
                                     <div class="badge badge-small-white"> Cryptocurrency</div>
-                                    <h3 class="h3 smaller _8f8fab">CryptoCrash </h3>
+                                    <h3 class="h3 smaller _8f8fab">CryptoCrash course</h3>
                                     <div class="grey">Unlock the Secrets of Digital Gold: Mastering Cryptocurrency Basics </div>
                                     <div class="badge-container">
                                         <div class="btn-1 smaller white">Find out more</div>
                                     </div>
                                 </div>
                             </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png 514w"
-                                alt="" /></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f53"
+                                alt="" class="pack-formation-book"/></a><a data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f53"
                                 href="" class="pack-formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/652787c0f4278ac05bfaaaa9_Invest%20Pro%20(1)%20(1).png" loading="lazy" sizes="(max-width: 479px) 100vw, 260px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/652787c0f4278ac05bfaaaa9_Invest%20Pro%20(1)%20(1)-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/652787c0f4278ac05bfaaaa9_Invest%20Pro%20(1)%20(1).png 503w" alt="" class="forma-card"/><div class="pack-formation-info"><div class="stroke-container opaque"><div class="badge badge-small-white">Decentralized Finance (DeFi) Fundamentals</div><h3 class="h3 smaller _8f8fab">DeFi Dive</h3><div class="grey margin-bottom-mobile">Dive Into DeFi: Explore New Frontiers in Finance and Revolutionize Your Financial Future! </div><div class="badge-container"><div class="btn-1 smaller white">Find out more</div></div></div></div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png" loading="lazy" sizes="(max-width: 479px) 120px, 170px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png 505w" alt="" class="pack-formation-book"/></a>
                             <a
                                 data-w-id="fa30e064-96f3-3ad0-4ea8-6d6059f75f61" href="/formations/business-pro" class="pack-formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6495a05669906da7f01af64e_business.jpeg" loading="lazy" alt="" class="forma-card" />
