--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         </div>
                     </div>
                 </div>
-                <div class="btn-box"><a href="#Formations" class="btn-3 no-break hide-mobile w-button">Nos formations</a></div>
+                <div class="btn-box"><a href="#Formations" class="btn-3 no-break hide-mobile w-button">Our courses</a></div>
             </div>
         </div>
         <div id="nosExperts" class="section no-padding-top">
@@ -377,10 +377,10 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="b154794a-639e-8cf5-9f66-f0f282c5dcc7" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/644ce80f3cb0ad36a5c67eb9_Yomi%20Denzel.jpg" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                                        <p class="f-paragraph-regular f-text-weight-medium">Yomi Denzel</p>
-                                        <div class="f-paragraph-small">E-Commerce 2.0</div>
+                                        <p class="f-paragraph-regular f-text-weight-medium">Emilien Lambert</p>
+                                        <div class="f-paragraph-small">Economist</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">Grâce à la révolution du E-Commerce 2.0, Yomi est passé d’étudiant fauché a millionnaire en générant plus de 30’000’000€ de chiffre d’affaires grâce à ses différents business.</div>
+                                            <div class="left-align margin-top"> With four decades of experience in finance,recognized for his exceptional performance,Emilien has decided to convert his experience and knowledge in the world of crypto and to surround himselve with the greatest experts to help you</div>
                                         </div>
                                     </div>
                                 </div>
@@ -392,11 +392,10 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div data-w-id="0b609bf0-d488-48fe-f7e3-25f3f8782b13" class="f-testimonial-card-smaller new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/6491a95f32d5e1196dad45ef_642e9c63af160b797d04cf6d_Timothe%CC%81e%20Moiroux-p-500.png" loading="lazy" alt="" class="image" />
                                 <div class="f-testimonial-author">
                                     <div>
-                                        <p class="f-paragraph-regular f-text-weight-medium">Timothée Moiroux</p>
-                                        <div class="f-paragraph-small">Investissement Immobilier</div>
+                                        <p class="f-paragraph-regular f-text-weight-medium">Suraj chada</p>
+                                        <div class="f-paragraph-small">Investissement </div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">C’est au lycée, alors étudiant, que Timothée comprend la fausse liberté qu’offrent les études et une carrière professionnelle à plein-temps. En parallèle de ces études de médecine, il réalise ses premiers investissements
-                                                immobiliers, financiers, et créé sa première entreprise.</div>
+                                            <div class="left-align margin-top">Having grown up in extreme poverty in India, Suraj's endless determination and desire to succeed has enabled him to make millions with crypto </div>
                                         </div>
                                     </div>
                                 </div>
