--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                         <p class="f-paragraph-regular f-text-weight-medium">Lucas Paciorek</p>
                                         <div class="f-paragraph-small">Blockchain</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top">. Lucas's vision for a decentralized future has inspired countless developers and entrepreneurs to push the boundaries of what is possible in the world of blockchain technology.</div>
+                                            <div class="left-align margin-top"> Lucas's vision for a decentralized future has inspired countless developers and entrepreneurs to push the boundaries of what is possible in the world of blockchain technology.</div>
                                         </div>
                                     </div>
                                 </div>
@@ -545,7 +545,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                         <p class="f-paragraph-regular f-text-weight-medium">Michael Stevens</p>
                                         <div class="f-paragraph-small">Trader</div>
                                         <div class="text-founder-container">
-                                            <div class="left-align margin-top"><br/>Trader with over 20 years of experience in equities, derivatives, and cryptocurrencies. Founder of a successful proprietary trading firm, specializing in algorithmic trading strategies.<br/>.<br/></div>
+                                            <div class="left-align margin-top"><br/>Trader with over 20 years of experience in equities, derivatives, and cryptocurrencies. Founder of a successful proprietary trading firm, specializing in algorithmic trading strategies.<br/><br/></div>
                                         </div>
                                     </div>
                                 </div>
