--- a/index.html
+++ b/index.html
@@ -668,14 +668,14 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
         <div class="section no-padding-top no-padding-bottom">
             <div class="container zindex2 _20px-padding-bottom">
                 <div class="header-center-container">
-                    <div class="subtitle big-width">98% de satisfaction</div>
-                    <h2 class="h2">Ils ont atteint leurs <span class="bleu-light">objectifs</span></h2>
+                    <div class="subtitle big-width">98% customer satisfaction</div>
+                    <h2 class="h2">They achieved their  <span class="bleu-light">goals</span></h2>
                 </div>
                 <div class="review-banner-container center less-margin">
                     <div class="embed-white w-embed">
                         <!-- TrustBox widget - Micro TrustScore -->
-                        <div class="trustpilot-widget trust-normal" data-locale="fr-FR" data-template-id="5419b637fa0340045cd0c936" data-businessunit-id="64cbdf5ec1122a68d8e2caee" data-style-height="20px" data-style-width="100%" data-theme="dark">
-                            <a href="https://fr.trustpilot.com/review/mindeo.com" target="_blank" rel="noopener"></a>
+                        <div class="trustpilot-widget trust-normal" data-locale="en-US" data-template-id="5419b637fa0340045cd0c936" data-businessunit-id="64cbdf5ec1122a68d8e2caee" data-style-height="20px" data-style-width="100%" data-theme="dark">
+                           
                         </div>
                         <!-- End TrustBox widget -->
 
@@ -716,7 +716,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« D’étudiant fauché à entrepreneur générant plus de 2’000€ de bénéfices par jour »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« From broke student to entrepreneur generating over $4,000 a day in profits »</div>
                                         </div>
                                     </div>
                                     <div data-w-id="3fcb0975-cd77-2329-a775-61b68a1e9b08" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb5b4fea7342d73582_Screenshot%202023-04-06%20at%2010.37.36.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -737,7 +737,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« Un simple serveur peut générer 250’000€ avec cette formation »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« A single server can generate $500,000 with this training »</div>
                                         </div>
                                     </div>
                                     <div data-w-id="0e385ebb-90e2-32f6-93a8-6df771fd278f" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb56bfe259d1cb8281_Screenshot%202023-04-06%20at%2010.40.08.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.996826171875px, 25vw"
@@ -760,7 +760,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« Plus de 1’200’000€ de CA à 21 ans »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« More than $1,200,000 in profits at the age of 21 »</div>
                                         </div>
                                     </div>
                                     <div data-w-id="b255d799-f04c-5baf-eed8-4710ed8d85b8" style="display:block;-webkit-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-215px, 0, 0) scale3d(0.6, 0.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -782,7 +782,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 2’000’000€ de CA et plusieurs boutiques qui tournent »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">«2,000,000$ in profits»</div>
                                         </div>
                                     </div>
                                     <div data-w-id="f38109d6-0663-78ad-1ebc-2c7950293ed0" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93ebdaa00cf10d966b3a_Screenshot%202023-04-06%20at%2010.38.19.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -803,7 +803,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">Edward a fait plus de 2’500’000€ de CA grâce à la formation<br/></div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">Edward has made over $2,500,000 in profits thanks to training<br/></div>
                                         </div>
                                     </div>
                                     <div data-w-id="3a862c10-aa33-8f31-a1d8-089502a8499f" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93ea7c4eb3839db999cd_Screenshot%202023-04-06%20at%2010.36.56.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -824,7 +824,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« Ce couple génère 1’500’000€ de CA et déménage dans la ville de ses rêves »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« This couple generates €1,500,000 in profits and moves to the city of their dreams »</div>
                                         </div>
                                     </div>
                                     <div data-w-id="a78adb64-d971-7a4a-f9ac-3f22ffa0356c" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb204eb8b1a5478c6e_Screenshot%202023-04-06%20at%2010.39.20.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, 319.9970703125px"
@@ -845,7 +845,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 1’000’000€ de CA à seulement 19 ans»</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« 1,000,000€ in profits at just 19 years of age»</div>
                                         </div>
                                     </div>
                                     <div data-w-id="015ab506-89cc-8207-1309-8982c5044dc6" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb97c1db5be7134891_Screenshot%202023-04-06%20at%2010.38.37.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -866,7 +866,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« Ils ont changé de vie grace à la formation et on fait plus de 15’000’000€ de CA »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« They changed their lives thanks to the training and made over €15,000,000 in profits. »</div>
                                         </div>
                                     </div>
                                     <div data-w-id="2395379d-310d-30a2-efee-0d5028abc1ff" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb85af6bdd22e44b5e_Screenshot%202023-04-06%20at%2010.39.43.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -887,7 +887,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                             </div>
                                         </div>
                                         <div class="info-slider-container">
-                                            <div class="small-text marrgin-bottom _15px-mobile">« 2’500’000€ de CA après seulement 4 mois d&#x27;e-commerce »</div>
+                                            <div class="small-text marrgin-bottom _15px-mobile">« 2,500,000 in profits after just 4 months»</div>
                                         </div>
                                     </div>
                                     <div data-w-id="bcdf6c1f-c4d1-ab42-2357-0b32c5222fb8" class="slide__image next"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/642e93eb30a620edbeeda444_Screenshot%202023-04-06%20at%2010.40.47.jpg" sizes="(max-width: 767px) 36vw, (max-width: 991px) 266.6640625px, (max-width: 1279px) 319.9970703125px, 25vw"
@@ -911,9 +911,9 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
         <div id="nosContenus" class="section white">
             <div class="container w-container">
                 <div class="header-center-container">
-                    <div class="subtitle big-width black">Toujours hésitant ?</div>
-                    <h2 class="h2 dark">Découvrez nos contenus <span class="blue">gratuits</span></h2>
-                    <div class="subtitle big-width dark-grey margin-top">Nos mini formations gratuites vous aideront à développer des fondations solides dans les domaines du développement personnel, du business en ligne, de l’entrepreneuriat et de l’investissement.</div>
+                    <div class="subtitle big-width black">Still not sure?</div>
+                    <h2 class="h2 dark">Check out our free  <span class="blue">content</span></h2>
+                    <div class="subtitle big-width dark-grey margin-top">Our free mini-training courses will help you develop a solid foundation in mindset, investment, trading and blockchain.</div>
                 </div>
                 <div class="flex-formation"><a data-w-id="f4e95201-5c3d-680a-dad6-3695b6afd962" style="opacity:0" href="https://www.youtube.com/watch?v=ooR3HhRtlko&amp;t=5s" target="_blank" class="formation-container w-inline-block"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64537ec17b973fb6bafc26bb_Ecommerce.jpg" loading="lazy" sizes="(max-width: 479px) 84vw, (max-width: 767px) 86vw, 100vw" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64537ec17b973fb6bafc26bb_Ecommerce-p-500.jpg 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/64537ec17b973fb6bafc26bb_Ecommerce.jpg 1029w" alt="" class="img-formation"/><div class="formation-content"><h3 class="h3 smaller"><strong>Le E-Commerce 2.0</strong></h3><div class="smaller grey">Découvrez l’E-Commerce 2.0, les bases du business en ligne et générez vos premiers revenus en quelques jours grâce à cette série de vidéos complètement gratuites.</div></div><div class="btn-1 smaller white margin-top">Voir la formation gratuite</div></a>
                     <a
