--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="column _75 left">
                             <div class="badge">Best sale</div>
                             <h2 class="h2 bleu less-margin-top">Digital Wealth pack</h2>
-                            <div class="subtitle dark-grey">The didital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, ReguCrypto and Trader Mindset) and over 200 hours of content in a single Pack. </div>
+                            <div class="subtitle dark-grey">The didital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, ReguCrypto and AI Mania) and over 200 hours of content in a single Pack. </div>
                             <div class="banner-btn-container mobile-centered"><a href="" class="btn-1 w-button">Find out more</a></div>
                         </div>
                         <div class="column _50">
