--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                 <div class="header-center-container">
                     <div class="relative"></div>
                 </div>
-                <h2 class="h2 padding-left center-mobile">Take action<br/>now !</h2>
+                <h2 class="h2 padding-left center-mobile">Take action now !</h2>
             </div>
             <div class="container zindex2 margin-top zindex1">
                 <div class="fromation-new-box">
