--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                         <div class="column _75 left">
                             <div class="badge">Best sale</div>
                             <h2 class="h2 bleu less-margin-top">Digital Wealth pack</h2>
-                            <div class="subtitle dark-grey">The didital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, ReguCrypto and AI Mania) and over 200 hours of content in a single Pack. </div>
+                            <div class="subtitle dark-grey">The didital wealth Pack brings together 6 training courses (CryptoCrash ,  CryptoProfit Pro,  DeFi Dive, BlockBuster Bootcamp, Trader Mindset and AI Mania) and over 200 hours of content in a single Pack. </div>
                             <div class="banner-btn-container mobile-centered"><a href="" class="btn-1 w-button">Find out more</a></div>
                         </div>
                         <div class="column _50">
@@ -1030,7 +1030,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                                         <div class="white small-feature"><strong class="bold-text-2">BlockBuster Bootcamp : </strong>Build Your Future with Blockchain</div>
                                     </div>
                                     <div class="pack-cta-check"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64539fade55e8a5d72ff03db_GCBDFichier%2033%202.png" loading="lazy" alt="" class="check" />
-                                        <div class="white small-feature"><strong class="bold-text-2">ReguCrypto: </strong> Navigating the Legal Landscape of Digital Assets</div>
+                                        <div class="white small-feature"><strong class="bold-text-2">Trader Mindset: </strong>  Develop the Confidence and Discipline to Thrive in Crypto Trading!</div>
                                     </div>
                                     <div class="pack-cta-check"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/64539fade55e8a5d72ff03db_GCBDFichier%2033%202.png" loading="lazy" alt="" class="check" />
                                         <div class="white small-feature"><strong class="bold-text-2">AI Mania :</strong>Learn how to make millions with AI</div>
