--- a/index.html
+++ b/index.html
@@ -944,34 +944,34 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                 <div class="fromation-new-box">
                     <div data-w-id="cd30ab72-fa71-9bd7-1bdf-054b602a6146" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c517287d80579992f24_EcomPro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Yomi Denzel</p>
-                            <div class="small-text _13px white">Les secrets de l’E-Commerce</div>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Ananya Rao</p>
+                            <div class="small-text _13px white">CryptoCrash Course</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png 575w"
-                            alt="EcomPro formation par Yomi Denzel" class="formation-book" />
+                            alt="" class="formation-book" />
                         <div data-w-id="35777baf-c9d5-e2a8-9c7a-a6fa7c61a339" class="formation-new-hover">
-                            <div class="badge populaire">E-commerce 2.0</div>
+                            <div class="badge populaire">Introduction</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Formation Ecom Pro</p>
-                                <div class="small-text _13px white left-align">Ecom Pro est le seul programme dont vous aurez besoin pour réussir dans le E-Commerce, peu importe votre parcours, vos connaissances et vos compétences de départ.</div>
-                            </div><a href="/formations/ecom-pro" class="btn-1 smaller full-space-tablette w-button">Accéder à la formation</a></div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">Basics of crypto</p>
+                                <div class="small-text _13px white left-align">Master the volatile crypto market with our CryptoCrash Course! Gain expert insights and practical skills to navigate digital assets confidently. Join thousands of successful investors who have unlocked the secrets of crypto success!</div>
+                            </div><a href="/formations/ecom-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee295" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51e03bcda5f9cb9add_test.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Oussama Amar</p>
-                            <div class="small-text _13px white">Lancer son business avec l&#x27;IA</div>
-                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a8c124f3e0b148b56_Business%20Pro.png" loading="lazy" alt="Le livre de Business Pro, la seule formation dont vous aurez besoin pour lancer votre business freelance, créer une agence, devenir coach ou lancer un start up à succès."
+                            <p class="f-paragraph-regular f-text-weight-medium center">Suraj Chada</p>
+                            <div class="small-text _13px white">CryptoProfit Pro</div>
+                        </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a8c124f3e0b148b56_Business%20Pro.png" loading="lazy" alt=""
                             class="formation-book" />
                         <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee29d" class="formation-new-hover">
-                            <div class="badge populaire">Entrepreneuriat</div>
+                            <div class="badge populaire">Investment</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Formation Business Pro</p>
-                                <div class="small-text _13px white left-align">Business Pro est la seule formation dont vous aurez besoin pour lancer votre business freelance, créer une agence, devenir coach ou lancer un start up à succès.</div>
-                            </div><a href="/formations/business-pro" class="btn-1 smaller full-space-tablette w-button">Accéder à la fation</a></div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">Mastering investment</p>
+                                <div class="small-text _13px white left-align">Elevate your crypto investments with CryptoProfit Pro! Learn advanced strategies to maximize returns in the fast-paced crypto market. Unleash your full potential as a crypto investor today!</div>
+                            </div><a href="/formations/business-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51410a151f6d1145d9_Immopro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Timothée Moiroux</p>
-                            <div class="small-text _13px white">Investir dans l&#x27;immobilier</div>
+                            <div class="small-text _13px white">Mastering</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png 514w"
                             alt="Le livre de Immo Pro, la seule formation dont vous aurez besoin pour investir dans l’immobilier et générer des revenus passifs, peu importe votre capital de départ" class="formation-book" />
                         <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa91"
