--- a/index.html
+++ b/index.html
@@ -945,68 +945,68 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                     <div data-w-id="cd30ab72-fa71-9bd7-1bdf-054b602a6146" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c517287d80579992f24_EcomPro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Ananya Rao</p>
-                            <div class="small-text _13px white">CryptoCrash Course</div>
+                            <div class="small-text _13px white">Basics of crypto</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4afd053e1139ef6e7b_Ecom%20pro.png 575w"
                             alt="" class="formation-book" />
                         <div data-w-id="35777baf-c9d5-e2a8-9c7a-a6fa7c61a339" class="formation-new-hover">
                             <div class="badge populaire">Introduction</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Basics of crypto</p>
+                                <p class="f-paragraph-regular f-text-weight-medium white">CryptoCrash Course</p>
                                 <div class="small-text _13px white left-align">Master the volatile crypto market with our CryptoCrash Course! Gain expert insights and practical skills to navigate digital assets confidently. Join thousands of successful investors who have unlocked the secrets of crypto success!</div>
                             </div><a href="/formations/ecom-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee295" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51e03bcda5f9cb9add_test.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Suraj Chada</p>
-                            <div class="small-text _13px white">CryptoProfit Pro</div>
+                            <div class="small-text _13px white">Mastering investment</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a8c124f3e0b148b56_Business%20Pro.png" loading="lazy" alt=""
                             class="formation-book" />
                         <div data-w-id="73fdb28e-5b51-f74c-d3dc-08650d4ee29d" class="formation-new-hover">
                             <div class="badge populaire">Investment</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Mastering investment</p>
+                                <p class="f-paragraph-regular f-text-weight-medium white">CryptoProfit Pro</p>
                                 <div class="small-text _13px white left-align">Elevate your crypto investments with CryptoProfit Pro! Learn advanced strategies to maximize returns in the fast-paced crypto market. Unleash your full potential as a crypto investor today!</div>
                             </div><a href="/formations/business-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa89" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51410a151f6d1145d9_Immopro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Timothée Moiroux</p>
-                            <div class="small-text _13px white">Mastering</div>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Emilien Lambert</p>
+                            <div class="small-text _13px white">Dive into DeFi</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4ae03bcd610dcb8d90_Immo%20pro.png 514w"
                             alt="Le livre de Immo Pro, la seule formation dont vous aurez besoin pour investir dans l’immobilier et générer des revenus passifs, peu importe votre capital de départ" class="formation-book" />
                         <div data-w-id="6b2da656-e8ac-049d-34c2-c04b017dfa91"
                             class="formation-new-hover">
-                            <div class="badge populaire">Immobilier</div>
+                            <div class="badge populaire">Finance</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Formation Immo Pro</p>
-                                <div class="small-text _13px white left-align">Immo Pro est la seule formation dont vous aurez besoin pour investir dans l’immobilier et générer des revenus passifs, peu importe votre capital de départ.</div>
-                            </div><a href="/formations/immo-pro" class="btn-1 smaller full-space-tablette w-button">Accéder à la formation</a></div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">DeFi Dive</p>
+                                <div class="small-text _13px white left-align">Explore the future of finance with DeFi Dive! Discover opportunities for financial freedom in decentralized finance. Join us to unlock new possibilities in the DeFi ecosystem!</div>
+                            </div><a href="/formations/immo-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabe4" style="opacity:0" class="fromation-new"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51f349772418c34d9a_Invest%20Pro.jpg" loading="lazy" alt="" class="img-formation-new" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Timothée Moiroux</p>
-                            <div class="small-text _13px white">Investir dans les marchés financiers</div>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Sanjay Vishnu</p>
+                            <div class="small-text _13px white">Learn all the basics of Blockchain</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a9de175dafc1f6b74_Invest%20pro.png 505w"
                             alt="Le livre de Immo Pro, la seule formation dont vous aurez besoin pour gagner de l’argent grâce à l’investissement en bourse et cryptomonnaie" class="formation-book" />
                         <div data-w-id="c33cb549-47b4-26a6-e2c7-27d7e2eeabec" class="formation-new-hover">
-                            <div class="badge populaire">Investissement</div>
+                            <div class="badge populaire">Blockchain</div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Formation Invest Pro</p>
-                                <div class="small-text _13px white left-align">Invest Pro est la seule formation dont vous aurez besoin pour gagner de l’argent grâce à l’investissement en bourse et cryptomonnaie</div>
-                            </div><a href="/formations/invest-pro" class="btn-1 smaller full-space-tablette w-button">Accéder à la formation</a></div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">BlockBuster Bootcamp</p>
+                                <div class="small-text _13px white left-align">Build the future with BlockBuster Bootcamp! Learn blockchain development fundamentals and create decentralized applications. Launch your blockchain journey with us today!</div>
+                            </div><a href="/formations/invest-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f5a" style="opacity:0" class="fromation-new test"><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6c51b2f0b5db03644735_sUUCC.jpg" loading="lazy" alt="" class="img-formation-new full-height" />
                         <div class="formation-new-info-box">
-                            <p class="f-paragraph-regular f-text-weight-medium center">Yomi Denzel</p>
+                            <p class="f-paragraph-regular f-text-weight-medium center">Vincent Chen</p>
                             <div class="small-text _13px white">Développer son mindset</div>
                         </div><img src="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro-p-500.png 500w, https://assets-global.website-files.com/63dd575601b9b8315968fad5/645b6b4a14250983938467de_Success%20pro.png 506w"
                             alt="SuccessPro Livre de formation" class="formation-book" />
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
-                            <div class="badge populaire">Développement Personnel </div>
+                            <div class="badge populaire">AI </div>
                             <div>
-                                <p class="f-paragraph-regular f-text-weight-medium white">Formation Success Pro</p>
-                                <div class="small-text _13px white left-align">De la découverte des secrets de la réussite, en passant par l’augmentation de votre productivité, jusqu’à l’optimisation de vos investissements, Success Pro est un tremplin révolutionnaire vers le succès.</div>
-                            </div><a href="/formations/success-pro" class="btn-1 smaller full-space-tablette w-button">Accéder à la formation</a></div>
+                                <p class="f-paragraph-regular f-text-weight-medium white">Crypto AI EDGE</p>
+                                <div class="small-text _13px white left-align">Gain the ultimate advantage with Crypto AI EDGE! Harness the power of AI to optimize trading strategies and unlock new opportunities in blockchain. Stay ahead of the curve with AI at your fingertips!</div>
+                            </div><a href="/formations/success-pro" class="btn-1 smaller full-space-tablette w-button">Get the formation</a></div>
                     </div>
                     <div class="pack-cta-container _100-tablette">
                         <div class="pack-formation-cta">
