--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@ document.getElementByClass('trustpilotLink').addEventListener("click", function(
                             <div>
                                 <p class="f-paragraph-regular f-text-weight-medium white">Crypto AI EDGE</p>
                                 <div class="small-text _13px white left-align">Gain the ultimate advantage with Crypto AI EDGE! Harness the power of AI to optimize trading strategies and unlock new opportunities in blockchain. Stay ahead of the curve with AI at your fingertips!</div>
-                            </div><a href="/formations/success-pro" class="btn-1 smaller full-space-tablette w-button">Get the formation</a></div>
+                            </div><a href="/formations/success-pro" class="btn-1 smaller full-space-tablette w-button">Get the course</a></div>
                     </div>
                     <div class="pack-cta-container _100-tablette">
                         <div class="pack-formation-cta">
